# Riru-LocationReportEnabler

./: .gitignore  README.md  build.gradle  build.sh  gradle.properties  module.gradle
jni/: Application.mk
jni/main/: Android.mk  hook.cpp  hook.h  logging.h  main.cpp  misc.cpp  misc.h  riru.c  wrap.cpp  wrap.h
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  config.cpp  config.h  hook.cpp  hook.h  logging.h  main.cpp  misc.cpp  misc.h  rirud.cpp  rirud.h  socket.cpp  socket.h
src/main/: AndroidManifest.xml
template/magisk_module/: README.md  customize.sh
template_override/: config.sh  install.sh  module.prop  post-fs-data.sh  riru_module.prop
template_override/common/: service.sh  system.prop
